# fireglobe

./: .gitignore  HOW-TO-USE.md  README.md
SDK/BlockscoutAgent/: BlockScout.md  README.md  main.py
SDK/backend/: ASI.md  KNOWLEDGE_GRAPH_USAGE.md  README.md  env_template.txt  metrics.md  requirements.txt  sample.txt  server.py  test.py
SDK/backend/BlockscoutAgent/: README.md  main.py  pyproject.toml
SDK/backend/MetricsGenAgent/: README.md  agent.py
SDK/backend/db-server/: README.md
SDK/cdp-agent-tester-sdk/: CONTRIBUTING.md  NPM_PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  README.md  package-lock.json  package.json
SDK/cdp-agent-tester-sdk/src/: agent-tester.ts  backend-client.ts  conversation-logger.ts  index.ts  types.ts
SDK/db-server/: README.md  package.json  server.js
SDK/fireglobe-sdk-client/: .npmignore  CHANGELOG.md  PUBLISHING_GUIDE.md  README.md  package.json
SDK/fireglobe-sdk-client/examples/: basic-usage.ts
SDK/fireglobe-sdk-client/src/: agent-tester.ts  conversation-logger.ts  index.ts  types.ts
SDK/metricsgen/: README.md  agent.py
SDK/metricsgen/metrics/: metricsrag.py  utils.py
agentkit/typescript/: pnpm-lock.yaml
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/how-to-use/: page.tsx
frontend/components/: KnowledgeGraphVisualization.tsx
frontend/examples/: knowledgeGraphExample.ts
frontend/lib/: exportKnowledgeGraph.ts  knowledgeGraphStructure.ts  supabase.ts
sample-results/: agent-metrics.json  meTTa-kg.json  test-logs.md
(+12 files in other folders)
