[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockscout-agent"
version = "0.1.0"
description = "A uagents-based agent for analyzing blockchain transactions using BlockScout MCP server and ASI:ONE"
authors = [
    {name = "FireGlobe Team", email = "team@fireglobe.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uagents>=0.5.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "asyncio-mqtt>=0.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
